pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-test
spec:
  containers:
  - name: test
    image: busybox
    command: ["sh", "-c", "echo $TOTAL_TEAMS && sleep 3600"]
