nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    color: blue
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
